# ocaml-qasm

./: Makefile  deutsch.qasm  qasm.opam
lib/: dune  lexer.mll  linearize.ml  parse.ml  parse_utils.ml  parser.mly  prelude.ml  print.ml  syntax.ml
src/: dune  main.ml
