opam-version: "2.0"
maintainer: "ygrek@autistici.org"
homepage: "http://ygrek.org.ua/p/ocaml-snappy"
dev-repo: "git+https://github.com/ygrek/ocaml-qasm.git"
bug-reports: "https://github.com/ygrek/ocaml-qasm/issues"
license: "BSD-3-Clause"
authors: [ "ygrek" ]
tags: ["org:ygrek"]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs "@install" "@runtest" {with-test} "@doc" {with-doc}]
]
depends: [
  "ocaml"
  "dune"
  "menhir"
  "odoc" {with-doc}
]
synopsis: "Open Quantum Assembly Language parser"
